Optimize Csv.parseToLists()